infer-fix
include/internal/TestCPPTestCase.h:345: error: Const Refable Parameter
  Function parameter `func` is passed by-value but not modified inside this function, resulting in a potential unnecessary copy at the function's callsites. Change the type of the parameter to `const &`.
  343.          */
  344.         template<typename F, typename ...Args>
  345.         static nanoseconds duration (F func, Args&&... args)
               ^
  346.         {
  347.             auto start = system_clock::now();

src/TestCPPAssertions.cpp:136: error: Const Refable Parameter
  Function parameter `shouldNotThrow` is passed by-value but not modified inside this function, resulting in a potential unnecessary copy at the function's callsites. Change the type of the parameter to `const &`.
  134.     }
  135.
  136.     void Assertions::assertNoThrows (
           ^
  137.             function<void()> shouldNotThrow,
  138.             const string& failureMessage
